# JaegersPrototype

./: CMakeLists.txt  JaegersPrototype.sln  _hand.cpp  _leg.cpp  animation.cpp  body.cpp  camera.cpp  head.cpp  lighting.cpp  main.cpp  primitives.cpp  spawnable_object.cpp  texture.cpp  typedefs.cpp
JaegersPrototype/: Color3f.h  Engine.cpp  Engine.h  JaegersPrototype.vcxproj  JaegersPrototype.vcxproj.filters  KeyPressListener.cpp  KeyPressListener.h  Object3D.cpp  Object3D.h  Rectangle.cpp  Rectangle.h  Rotation.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3Df.h  main.cpp  resource.h
header/: _hand.h  _leg.h  animation.h  body.h  camera.h  head.h  lighting.h  material.h  primitives.h  spawnable_object.h  texture.h  typedefs.h
include/GL/: glu.h  glut.h
